{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 145,
  "lineage": "6cef70ff-2118-f621-6637-d7117f06a124",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6ed935da6db8e0d",
            "association_id": "eipassoc-0ca5890ba598fbe97",
            "domain": "vpc",
            "id": "eipalloc-0f6ed935da6db8e0d",
            "instance": "i-07107c32320b0eb39",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-031f05b08bec23873",
            "private_dns": "ip-10-0-1-197.eu-north-1.compute.internal",
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-56-228-74-219.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.74.219",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "paystream-bastion-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-bastion-eip",
              "Project": "paystream"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-037688ecd92e8611e",
            "arn": "arn:aws:ec2:eu-north-1:061664787519:instance/i-07107c32320b0eb39",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07107c32320b0eb39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "paystream-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-031f05b08bec23873",
            "private_dns": "ip-10-0-1-197.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-56-228-74-219.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.74.219",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "paystream"
                },
                "throughput": 0,
                "volume_id": "vol-0f886ba757bbc2615",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0179cbba789e8feaf",
            "tags": {
              "Name": "paystream-bastion"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-bastion",
              "Project": "paystream"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00c4bc406e428f29b"
            ]
          },
          "dependencies": [
            "module.bastion.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_subnet.public_1a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.clickhouse",
      "mode": "managed",
      "type": "aws_instance",
      "name": "clickhouse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-037688ecd92e8611e",
            "arn": "arn:aws:ec2:eu-north-1:061664787519:instance/i-07b7815430fb60427",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b7815430fb60427",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r6i.large",
            "ipv6_address_count": 0,
            "key_name": "paystream-bastion",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9936ce45199c678",
            "private_dns": "ip-10-0-10-70.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-north-1:061664787519:key/d6dd351d-f7dc-419e-a426-11eaf2d75ad4",
                "tags_all": {
                  "Environment": "dev",
                  "ManagedBy": "terraform",
                  "Project": "paystream"
                },
                "throughput": 125,
                "volume_id": "vol-07b2d195da2cab215",
                "volume_size": 100,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07142df521e0eb4b2",
            "tags": {
              "Name": "paystream-clickhouse"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-clickhouse",
              "Project": "paystream"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05c78261c1584e77a",
              "sg-0e23ef6f10f4f6940"
            ]
          },
          "dependencies": [
            "module.clickhouse.data.aws_ami.amazon_linux_2",
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_security_group.clickhouse",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_subnet.private_1a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c24e2f48e7cfe84",
            "association_id": "eipassoc-0a6466954a5d735d2",
            "domain": "vpc",
            "id": "eipalloc-06c24e2f48e7cfe84",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-0f3287c04df3088ca",
            "private_dns": "ip-10-0-1-224.eu-north-1.compute.internal",
            "private_ip": "10.0.1.224",
            "public_dns": "ec2-13-61-73-240.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.61.73.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "paystream-nat-eip"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-nat-eip",
              "Project": "paystream"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:internet-gateway/igw-0ed21eb1327a34887",
            "id": "igw-0ed21eb1327a34887",
            "owner_id": "061664787519",
            "tags": {
              "Name": "paystream-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-igw",
              "Project": "paystream"
            },
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06c24e2f48e7cfe84",
            "association_id": "eipassoc-0a6466954a5d735d2",
            "connectivity_type": "public",
            "id": "nat-0c6a06894e0963523",
            "network_interface_id": "eni-0f3287c04df3088ca",
            "private_ip": "10.0.1.224",
            "public_ip": "13.61.73.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0179cbba789e8feaf",
            "tags": {
              "Name": "paystream-nat"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-nat",
              "Project": "paystream"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public_1a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:route-table/rtb-0b743f2bc79e4de81",
            "id": "rtb-0b743f2bc79e4de81",
            "owner_id": "061664787519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c6a06894e0963523",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "paystream-private-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-private-rt",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public_1a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:route-table/rtb-002ac8af1e1e7a5e4",
            "id": "rtb-002ac8af1e1e7a5e4",
            "owner_id": "061664787519",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ed21eb1327a34887",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "paystream-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-public-rt",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03da6a862db114c8c",
            "route_table_id": "rtb-0b743f2bc79e4de81",
            "subnet_id": "subnet-07142df521e0eb4b2"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_1a",
            "module.vpc.aws_subnet.public_1a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c4d05458e51b4610",
            "route_table_id": "rtb-0b743f2bc79e4de81",
            "subnet_id": "subnet-061557984ee3fac94"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_1b",
            "module.vpc.aws_subnet.public_1a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08e6dd9d24d34e49e",
            "route_table_id": "rtb-002ac8af1e1e7a5e4",
            "subnet_id": "subnet-0179cbba789e8feaf"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_1a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:security-group/sg-00c4bc406e428f29b",
            "description": "Bastion SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00c4bc406e428f29b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from allowed CIDR",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "paystream-bastion-2026032820553923350000000b",
            "name_prefix": "paystream-bastion-",
            "owner_id": "061664787519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paystream-bastion-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-bastion-sg",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "clickhouse",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:security-group/sg-0e23ef6f10f4f6940",
            "description": "ClickHouse access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e23ef6f10f4f6940",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ClickHouse HTTP from bastion",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4bc406e428f29b"
                ],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [],
                "description": "ClickHouse HTTP from private subnet",
                "from_port": 8123,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 8123
              },
              {
                "cidr_blocks": [],
                "description": "ClickHouse native from bastion",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4bc406e428f29b"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "ClickHouse native from private subnet",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [],
                "description": "SSH from bastion for admin",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4bc406e428f29b"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "paystream-clickhouse-20260328205543373000000013",
            "name_prefix": "paystream-clickhouse-",
            "owner_id": "061664787519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paystream-clickhouse-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-clickhouse-sg",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:security-group/sg-0599e0ebeba73a28e",
            "description": "DocumentDB access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0599e0ebeba73a28e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DocumentDB from bastion",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4bc406e428f29b"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "DocumentDB from private subnet",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "paystream-docdb-2026032820554335030000000e",
            "name_prefix": "paystream-docdb-",
            "owner_id": "061664787519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paystream-docdb-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-docdb-sg",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:security-group/sg-033c9adf7ec082f30",
            "description": "ECS Fargate tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-033c9adf7ec082f30",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Debezium REST from bastion",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4bc406e428f29b"
                ],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [],
                "description": "Debezium REST from private subnet",
                "from_port": 8083,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 8083
              },
              {
                "cidr_blocks": [],
                "description": "Schema Registry from bastion",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4bc406e428f29b"
                ],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [],
                "description": "Schema Registry from private subnet",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "paystream-ecs-20260328205543362000000012",
            "name_prefix": "paystream-ecs-",
            "owner_id": "061664787519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paystream-ecs-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-ecs-sg",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "msk",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:security-group/sg-0a40fbedb671b3251",
            "description": "MSK Kafka access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a40fbedb671b3251",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Kafka IAM auth from private subnet",
                "from_port": 9098,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 9098
              },
              {
                "cidr_blocks": [],
                "description": "Kafka SCRAM auth from private subnet",
                "from_port": 9096,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 9096
              }
            ],
            "name": "paystream-msk-2026032820554335140000000f",
            "name_prefix": "paystream-msk-",
            "owner_id": "061664787519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paystream-msk-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-msk-sg",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:security-group/sg-05c78261c1584e77a",
            "description": "Private subnet intercommunication",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c78261c1584e77a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "All traffic from self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "paystream-private-2026032820553908660000000a",
            "name_prefix": "paystream-private-",
            "owner_id": "061664787519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paystream-private-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-private-sg",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:security-group/sg-05de93cdc3ac6273c",
            "description": "RDS PostgreSQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05de93cdc3ac6273c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from bastion",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00c4bc406e428f29b"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from private subnet",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c78261c1584e77a"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "paystream-rds-20260328205543359100000011",
            "name_prefix": "paystream-rds-",
            "owner_id": "061664787519",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "paystream-rds-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-rds-sg",
              "Project": "paystream"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_security_group.bastion",
            "module.vpc.aws_security_group.private",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:subnet/subnet-07142df521e0eb4b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07142df521e0eb4b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061664787519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "paystream-private-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-private-1a",
              "Project": "paystream"
            },
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:subnet/subnet-061557984ee3fac94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-061557984ee3fac94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "061664787519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "paystream-private-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-private-1b",
              "Project": "paystream"
            },
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:subnet/subnet-0179cbba789e8feaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0179cbba789e8feaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "061664787519",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "paystream-public-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-public-1a",
              "Project": "paystream"
            },
            "vpc_id": "vpc-0dd288ca056935049"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:061664787519:vpc/vpc-0dd288ca056935049",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f43fe0d76b748e76",
            "default_route_table_id": "rtb-01cc8ffb985371091",
            "default_security_group_id": "sg-0946de1a6b587f8b3",
            "dhcp_options_id": "dopt-0a52f0bdb5e8d5048",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0dd288ca056935049",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01cc8ffb985371091",
            "owner_id": "061664787519",
            "tags": {
              "Name": "paystream-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "paystream-vpc",
              "Project": "paystream"
            }
          }
        }
      ]
    }
  ]
}